--- a/index.html
+++ b/index.html
@@ -9,24 +9,23 @@
 <body>
     <div class="container">
         <h1>Encryption app</h1>
-        <!-- <form action="index.php" method="post">
-            <label for="text">Text to encrypt</label>
-            <input type="text" name="text" id="text" placeholder="Enter text to encrypt">
-            <label for="key">Key</label>
-            <input type="number" name="key" id="key" placeholder="Enter key">
-            <input type="submit" value="Encrypt">
-        </form> -->
-        <textarea name="input area" id="input" cols="30" rows="10"></textarea>
-        <div>
-        <input type="number">
+        <div class="text">
+            <label for="input">Enter text to encrypt</label>
+            <textarea name="input area" id="input" cols="30" rows="10"></textarea>
         </div>
-        <div class="buttons">
-            <button id="encrypt">Encrypt</button>
-            <button id="decrypt">Decrypt</button>
-    </div>
-        <div class="result">
-          <textarea name="Output area" id="output" cols="30" rows="10"></textarea>
-        </div>   
+        <div class="key" >
+            <label label for="key" >Enter numerical key</label>
+            <input id="key" type="number" placeholder="eg 1234">
+        </div>
+        <div>
+            <button class="buttons" id="encryptButton">Encrypt</button>
+            <button class="buttons" id="decryptButton">Decrypt</button>
+        </div>
+        <div class="text">
+            <label for="output">Output</label>
+            <textarea name="Output area" id="output" cols="30" rows="10"></textarea>
+        </div>
+    </div>   
     <script src="index.js"></script>
 </body>
 </html>
