Fixed some styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Encryption app</h1>
         <div class="text">
-            <label for="input">Enter text to encrypt</label>
+            <label for="input"> Enter text to encrypt/decrypt </label>
             <textarea name="input area" id="input" cols="30" rows="10"></textarea>
         </div>
         <div class="key" >
@@ -23,7 +23,7 @@
         </div>
         <div class="text">
             <label for="output">Output</label>
-            <textarea name="Output area" id="output" cols="30" rows="10"></textarea>
+            <textarea name="Output area" id="output" cols="30" rows="4"></textarea>
         </div>
     </div>   
     <script src="index.js"></script>
